envoy/gke_app_logging/gke/my-srv.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-srv
  labels:
    type: myapp-srv
spec:
  type: NodePort
  ports:
  - name: my-srv-port
    protocol: TCP  
    port: 8080
    targetPort: 8080
    #port: 10000
    #targetPort: 10000    
  selector:
    type: myapp
