envoy/gke_app_logging/gke/my-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp-srv-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: gkecert
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: myapp-srv
          servicePort: 8080
